# sfpl

./: .gitignore  CHANGELOG.md  README.md  sfpl.cabal  std.sfpl  test-elab.txt
app/: Main.hs  elab.txt
app/SFPL/: Base.hs  Elab.hs  Eval.hs  Parser.hs  Utils.hs
app/SFPL/Elab/: Class.hs  Context.hs  Error.hs  Instances.hs  Internal.hs  Metacontext.hs  Types.hs  Unification.hs
app/SFPL/Elab/Error/: Instances.hs  Pretty.hs  Types.hs
app/SFPL/Eval/: Instances.hs  Internal.hs  Pretty.hs  Types.hs
app/SFPL/Parser/: Expr.hs  Internal.hs
app/SFPL/Syntax/: Core.hs  Raw.hs
app/SFPL/Syntax/Core/: Instances.hs  Pretty.hs  Types.hs
app/SFPL/Syntax/Raw/: Instances.hs  Pretty.hs  Types.hs
app/SFPL/Utils/: List.hs
test/: Main.hs
test/SFPL/: ElabSpec.hs  EvalSpec.hs  ParserSpec.hs
test/file/elab/failure/: 1.txt  2.txt
test/file/elab/success/in/: 1.txt  2.txt  3.txt  4.txt  5.txt
test/file/parser/failure/: dd1.txt  dd2.txt  dd3.txt  pat1.txt  pat3.txt  pat4.txt  pat5.txt  pat6.txt  prog1.txt  tm2.txt  tm3.txt  tm4.txt  tm5.txt  tm6.txt  tm7.txt  tm8.txt  ty1.txt  ty2.txt  ty3.txt  ty4.txt  ty5.txt  ty6.txt
test/file/parser/success/: dd1.txt  dd2.txt  dd3.txt  pat10.txt  pat3.txt  pat5.txt  pat6.txt  pat8.txt  pat9.txt  prog1.txt  tm1.txt  tm2.txt  tm3.txt  tm4.txt  tm5.txt  tm6.txt  tm7.txt  tm8.txt  tm9.txt  ty1.txt  ty2.txt  ty3.txt  ty4.txt  ty5.txt
